--- a/algoritmo/src/telas/fxmls/NovoParticipante.fxml
+++ b/algoritmo/src/telas/fxmls/NovoParticipante.fxml
@@ -17,30 +17,30 @@
             <Image url="@../../imagens/novoParticipante.png" />
          </image>
       </ImageView>
-      <Button fx:id="add" blendMode="DARKEN" layoutX="100.0" layoutY="268.0" mnemonicParsing="false" onAction="#NovoParticipante" prefHeight="31.0" prefWidth="98.0" text="Adicionar" textFill="#e64343">
+      <Button fx:id="add" blendMode="DARKEN" layoutX="63.0" layoutY="368.0" mnemonicParsing="false" onAction="#NovoParticipante" prefHeight="31.0" prefWidth="98.0" text="Adicionar" textFill="#e64343">
          <font>
             <Font size="17.0" />
          </font>
       </Button>
-      <Label layoutX="20.0" layoutY="75.0" prefHeight="55.0" prefWidth="326.0" text="Participante" textFill="#e64343">
+      <Label layoutX="20.0" layoutY="51.0" prefHeight="55.0" prefWidth="326.0" text="Participante" textFill="#e64343">
          <font>
             <Font name="Georgia Bold Italic" size="39.0" />
          </font>
       </Label>
-      <Label layoutX="100.0" layoutY="41.0" text="Novo" textFill="#e64343">
+      <Label layoutX="100.0" layoutY="26.0" text="Novo" textFill="#e64343">
          <font>
             <Font name="Georgia Bold Italic" size="36.0" />
          </font>
       </Label>
-      <Label layoutX="24.0" layoutY="143.0" text="Digite o nome e selecione uma cidade" textAlignment="CENTER" textFill="#e64343">
+      <Label layoutX="24.0" layoutY="130.0" text="Digite o nome e selecione uma cidade" textAlignment="CENTER" textFill="#e64343">
          <font>
-            <Font name="Comic Sans MS Bold Italic" size="13.0" />
+            <Font name="Arial Narrow Bold Italic" size="16.0" />
          </font>
       </Label>
-      <TextField fx:id="nome" layoutX="68.0" layoutY="179.0" />
-      <TableView fx:id="tabela" layoutX="260.0" layoutY="162.0" prefHeight="250.0" prefWidth="142.0">
+      <TextField fx:id="nome" layoutX="59.0" layoutY="157.0" />
+      <TableView fx:id="tabela" layoutX="231.0" layoutY="156.0" prefHeight="250.0" prefWidth="164.0">
          <columns>
-            <TableColumn fx:id="cidade" prefWidth="141.0" text="Cidades" />
+            <TableColumn fx:id="cidade" prefWidth="163.0" text="Cidades" />
          </columns>
       </TableView>
    </children>
