--- a/algoritmo/src/telas/fxmls/NovoParticipante2.fxml
+++ b/algoritmo/src/telas/fxmls/NovoParticipante2.fxml
@@ -16,34 +16,34 @@
             <Image url="@../../imagens/novoParticipante.png" />
          </image>
       </ImageView>
-      <Button fx:id="adicionarLigacao" blendMode="DARKEN" layoutX="58.0" layoutY="378.0" mnemonicParsing="false" onAction="#AddLigacao" prefHeight="38.0" prefWidth="170.0" text="Adicionar ligação" textFill="#e64343">
+      <Button fx:id="adicionarLigacao" blendMode="DARKEN" layoutX="71.0" layoutY="356.0" mnemonicParsing="false" onAction="#AddLigacao" prefHeight="38.0" prefWidth="170.0" text="Adicionar ligação" textFill="#e64343">
          <font>
             <Font size="17.0" />
          </font>
       </Button>
-      <Label layoutX="19.0" layoutY="25.0" text="O participante adicionado tem contato direto " textAlignment="CENTER" textFill="#e64343">
+      <Label layoutX="27.0" layoutY="23.0" text="O participante adicionado tem contato direto " textAlignment="CENTER" textFill="#e64343">
          <font>
-            <Font name="Arial Narrow Bold Italic" size="16.0" />
+            <Font name="Comic Sans MS Bold Italic" size="13.0" />
          </font>
       </Label>
-      <Button fx:id="sair" blendMode="DARKEN" layoutX="241.0" layoutY="378.0" mnemonicParsing="false" onAction="#Sair" prefHeight="38.0" prefWidth="108.0" text="Sair" textFill="#e64343">
+      <Button fx:id="sair" blendMode="DARKEN" layoutX="256.0" layoutY="356.0" mnemonicParsing="false" onAction="#Sair" prefHeight="38.0" prefWidth="142.0" text="Sair" textFill="#e64343">
          <font>
             <Font size="17.0" />
          </font>
       </Button>
-      <TableView fx:id="tabelapart" layoutX="76.0" layoutY="108.0" prefHeight="250.0" prefWidth="214.0">
+      <TableView fx:id="tabelapart" layoutX="76.0" layoutY="98.0" prefHeight="250.0" prefWidth="142.0">
          <columns>
-            <TableColumn fx:id="participantes" prefWidth="213.0" text="Participantes" />
+            <TableColumn fx:id="participantes" prefWidth="141.0" text="Participantes" />
          </columns>
       </TableView>
       <Label layoutX="50.0" layoutY="42.0" text="com algum outro participante?" textAlignment="CENTER" textFill="#e64343">
          <font>
-            <Font name="Arial Narrow Bold Italic" size="16.0" />
+            <Font name="Comic Sans MS Bold Italic" size="13.0" />
          </font>
       </Label>
       <Label layoutX="14.0" layoutY="68.0" text="Se sim, selecione a pessoa e clique em adicionar" textAlignment="CENTER" textFill="#e64343">
          <font>
-            <Font name="Arial Narrow Bold Italic" size="16.0" />
+            <Font name="Comic Sans MS Bold Italic" size="13.0" />
          </font>
       </Label>
    </children>
