--- a/algoritmo/src/telas/fxmls/Tela1.fxml
+++ b/algoritmo/src/telas/fxmls/Tela1.fxml
@@ -14,19 +14,19 @@
             <Image url="@../../imagens/bacteriofago.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="123.0" layoutY="37.0" prefHeight="55.0" prefWidth="326.0" text="BEM VINDO(A)" textFill="#69eda6">
+      <Label layoutX="178.0" layoutY="37.0" prefHeight="55.0" prefWidth="326.0" text="Bem-vindo(a)" textFill="#69eda6">
          <font>
             <Font name="Georgia Bold Italic" size="39.0" />
          </font>
       </Label>
-      <Label layoutX="69.0" layoutY="86.0" text="AO ALGORITMOS' PROJECT" textFill="#69eda6">
+      <Label layoutX="107.0" layoutY="100.0" text="ao Algoritm's projetc" textFill="#69eda6">
          <font>
-            <Font name="Georgia Bold Italic" size="30.0" />
+            <Font name="Georgia Bold Italic" size="36.0" />
          </font>
       </Label>
-      <Label layoutX="30.0" layoutY="233.0" text="Clique em CONTINUAR para ir para o projeto ou ADICIONAR para adicionar participante" textAlignment="CENTER" textFill="#9effca">
+      <Label layoutX="29.0" layoutY="204.0" text="Clique em Continuar para ir para o projeto ou Adicionar para adicionar participante" textAlignment="CENTER" textFill="#9effca">
          <font>
-            <Font name="Arial Narrow Bold Italic" size="15.0" />
+            <Font name="Comic Sans MS Bold Italic" size="13.0" />
          </font>
       </Label>
       <Button fx:id="Continuar" blendMode="HARD_LIGHT" layoutX="133.0" layoutY="268.0" mnemonicParsing="false" onAction="#Continuar" prefHeight="34.0" prefWidth="100.0" text="Continuar" textFill="#577464" />
