--- a/algoritmo/src/telas/fxmls/Tela3.fxml
+++ b/algoritmo/src/telas/fxmls/Tela3.fxml
@@ -14,18 +14,18 @@
             <Image url="@../../imagens/97039341_gettyimages-817426712.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="verGrafo" blendMode="SRC_ATOP" layoutX="181.0" layoutY="367.0" mnemonicParsing="false" onAction="#ChamarGrafoCC" prefHeight="34.0" prefWidth="178.0" text="Ver o grafo" textFill="#577464" />
-      <Label layoutX="86.0" layoutY="69.0" prefHeight="35.0" prefWidth="455.0" text="O número de vacinas" textFill="#2cac48">
+      <Button fx:id="verGrafo" blendMode="SRC_ATOP" layoutX="181.0" layoutY="409.0" mnemonicParsing="false" onAction="#ChamarGrafoCC" prefHeight="34.0" prefWidth="178.0" text="Ver o grafo" textFill="#577464" />
+      <Label layoutX="98.0" layoutY="69.0" prefHeight="35.0" prefWidth="334.0" text="O número de vacinas" textFill="#2cac48">
          <font>
             <Font name="Georgia Bold Italic" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="144.0" layoutY="104.0" prefHeight="35.0" prefWidth="334.0" text="necessárias é" textFill="#2cac48">
+      <Label layoutX="154.0" layoutY="104.0" prefHeight="35.0" prefWidth="227.0" text="necessárias é" textFill="#2cac48">
          <font>
             <Font name="Georgia Bold Italic" size="30.0" />
          </font>
       </Label>
-      <Label fx:id="nCC" layoutX="246.0" layoutY="157.0" text="1" textFill="#2cac48">
+      <Label fx:id="nCC" layoutX="246.0" layoutY="179.0" prefHeight="109.0" prefWidth="79.0" text="1" textFill="#2cac48">
          <font>
             <Font name="Georgia Bold Italic" size="96.0" />
          </font>
