--- a/algoritmo/src/telas/fxmls/NovoParticipante.fxml
+++ b/algoritmo/src/telas/fxmls/NovoParticipante.fxml
@@ -18,7 +18,7 @@
             <Image url="@../../imagens/novoParticipante.png" />
          </image>
       </ImageView>
-      <Button fx:id="add" blendMode="DARKEN" layoutX="100.0" layoutY="268.0" mnemonicParsing="false" onAction="#NovoParticipante" prefHeight="31.0" prefWidth="98.0" text="Adicionar" textFill="#e64343">
+      <Button fx:id="add" blendMode="DARKEN" layoutX="100.0" layoutY="389.0" mnemonicParsing="false" onAction="#NovoParticipante" prefHeight="31.0" prefWidth="98.0" text="Adicionar" textFill="#e64343">
          <font>
             <Font size="17.0" />
          </font>
@@ -39,8 +39,8 @@
          </font>
       </Label>
       <TextField fx:id="nome" layoutX="68.0" layoutY="179.0" />
-      <TabPane layoutX="42.0" layoutY="299.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" />
-      <TableView fx:id="tabela" layoutX="260.0" layoutY="162.0" prefHeight="250.0" prefWidth="142.0">
+      <TabPane layoutY="299.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" />
+      <TableView fx:id="tabela" layoutX="257.0" layoutY="178.0" prefHeight="250.0" prefWidth="142.0">
          <columns>
             <TableColumn fx:id="cidade" prefWidth="141.0" text="Cidades" />
          </columns>
