--- a/algoritmo/src/telas/fxmls/Tela4.fxml
+++ b/algoritmo/src/telas/fxmls/Tela4.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,21 +15,17 @@
             <Image url="@../../imagens/97039341_gettyimages-817426712.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="verGrafoClique" blendMode="SRC_ATOP" layoutX="181.0" layoutY="406.0" mnemonicParsing="false" onAction="#ChamarGrafoClique" prefHeight="34.0" prefWidth="178.0" text="Ver o grafo" textFill="#577464" />
-      <Label layoutX="52.0" layoutY="69.0" prefHeight="35.0" prefWidth="455.0" text="A cidade com maior número" textFill="#2cac48">
+      <Button fx:id="verGrafoClique" blendMode="SRC_ATOP" layoutX="181.0" layoutY="406.0" mnemonicParsing="false" onAction="#ChamarGrafoClique" prefHeight="34.0" prefWidth="178.0" text="Ver o grafo" textFill="#171616" />
+      <Label layoutX="84.0" layoutY="85.0" prefHeight="35.0" prefWidth="395.0" text="CIDADE(S) COM MAIOR " textFill="#570a0a">
          <font>
-            <Font name="Georgia Bold Italic" size="30.0" />
+            <Font name="Georgia Bold" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="136.0" layoutY="101.0" prefHeight="35.0" prefWidth="334.0" text="de casos da doença" textFill="#2cac48">
+      <Label layoutX="14.0" layoutY="116.0" prefHeight="35.0" prefWidth="536.0" text="NÚMERO DE CASOS DA DOENÇA" textFill="#570a0a">
          <font>
-            <Font name="Georgia Bold Italic" size="30.0" />
+            <Font name="Georgia Bold" size="30.0" />
          </font>
       </Label>
-      <Label fx:id="nClique" layoutX="52.0" layoutY="220.0" prefHeight="46.0" prefWidth="455.0" text="Recife" textFill="#2cac48">
-         <font>
-            <Font name="Georgia Bold Italic" size="40.0" />
-         </font>
-      </Label>
+      <ListView fx:id="clique" layoutX="183.0" layoutY="172.0" prefHeight="200.0" prefWidth="178.0" />
    </children>
 </AnchorPane>
