--- a/algoritmo/src/telas/fxmls/Tela1.fxml
+++ b/algoritmo/src/telas/fxmls/Tela1.fxml
@@ -21,7 +21,7 @@
       </Label>
       <Label layoutX="31.0" layoutY="263.0" text="Clique em CONTINUAR para ir para o projeto ou ADICIONAR para adicionar participante" textAlignment="CENTER" textFill="#ffed76">
          <font>
-            <Font name="Arial Narrow Bold" size="15.0" />
+            <Font size="13.0" />
          </font>
       </Label>
       <Button fx:id="Continuar" blendMode="HARD_LIGHT" layoutX="134.0" layoutY="293.0" mnemonicParsing="false" onAction="#Continuar" prefHeight="34.0" prefWidth="100.0" text="Continuar" textFill="#171616" />
